--- a/index.html
+++ b/index.html
@@ -93,161 +93,164 @@
           </li>
         </ul>
       </section>
+
+      <!-- section 3 -->
+      <section class="section-team-name">
+        <h2 class="section-team-title-name">Our Team</h2>
+        <ul>
+          <li class="section-team-item-name">
+            <img
+              src="./images/MarkGuerrero.jpg"
+              alt="Photo"
+              width="264"
+              height="260"
+            />
+            <h3 class="section-team-subtitle-name">Mark Guerrero</h3>
+            <p class="section-team-text-name">Product Designer</p>
+          </li>
+
+          <li class="section-team-item-name">
+            <img
+              src="./images/TomFord.jpg"
+              alt="Photo"
+              width="264"
+              height="260"
+            />
+            <h3 class="section-team-subtitle-name">Tom Ford</h3>
+            <p class="section-team-text-name">Frontend Developer</p>
+          </li>
+
+          <li class="section-team-item-name">
+            <img
+              src="./images/CamilaGarcia.jpg"
+              alt="Photo"
+              width="264"
+              height="260"
+            />
+            <h3 class="section-team-subtitle-name">Camila Garcia</h3>
+            <p class="section-team-text-name">Marketing</p>
+          </li>
+          <li class="section-team-item-name">
+            <img
+              src="./images/DanielWilson.jpg"
+              alt="Photo"
+              width="264"
+              height="260"
+            />
+            <h3 class="section-team-subtitle-name">Daniel Wilson</h3>
+            <p class="section-team-text-name">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- section 4 -->
+      <section class="section-portfolio">
+        <h2 class="section-title-portfolio">Our Portfolio</h2>
+        <ul class="section-list-portfolio">
+          <li class="section-item-portfolio">
+            <img
+              src="./images/bank.jpg"
+              class="section-img-bank"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Banking App</h3>
+            <p class="section-text-portfolio">App</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/code.jpg"
+              class="section-img-portfolio-code"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Cashless Payment</h3>
+            <p class="section-text-portfolio">Marketing</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/ordinator.jpg"
+              class="section-img-portfolio-ordinator"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Meditation App</h3>
+            <p class="section-text-portfolio">App</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/vouture.jpg"
+              class="section-portfolio-img-vouture"
+              alt="Taxi"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Taxi Service</h3>
+            <p class="section-text-portfolio">Marketing</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/telephone.jpg"
+              class="section-portfolio-img-telephone"
+              alt="Fon"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Taxi Service</h3>
+            <p class="section-text-portfolio">Marketing</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/education.jpg"
+              class="section-portfolio-img-education"
+              alt="education"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Online Courses</h3>
+            <p class="section-text-portfolio">Marketing</p>
+          </li>
+          <li class="section-item-portfolio">
+            <a href="" class="link"></a>
+            <img
+              src="./images/colag.jpg"
+              class="section-portfolio-img-colag"
+              alt="social media"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">
+              Instagram Stories Concept
+            </h3>
+            <p class="section-text-portfolio">Design</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/fruits.jpg"
+              class="section-portfolio-img-fruits"
+              alt="fruits"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Organic Food</h3>
+            <p class="section-text-portfolio">Web Site</p>
+          </li>
+          <li class="section-item-portfolio">
+            <img
+              src="./images/coffi.jpg"
+              class="section-portfolio-img-coffee"
+              alt="Coffee"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-subtitle-portfolio">Fresh Coffee</h3>
+            <p class="section-text-portfolio">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <!-- section 3 -->
-    <section class="section-team-name">
-      <h2 class="section-team-title-name">Our Team</h2>
-      <ul>
-        <li class="section-team-item-name">
-          <img
-            src="./images/MarkGuerrero.jpg"
-            alt="Photo"
-            width="264"
-            height="260"
-          />
-          <h3 class="section-team-subtitle-name">Mark Guerrero</h3>
-          <p class="section-team-text-name">Product Designer</p>
-        </li>
-
-        <li class="section-team-item-name">
-          <img
-            src="./images/TomFord.jpg"
-            alt="Photo"
-            width="264"
-            height="260"
-          />
-          <h3 class="section-team-subtitle-name">Tom Ford</h3>
-          <p class="section-team-text-name">Frontend Developer</p>
-        </li>
-
-        <li class="section-team-item-name">
-          <img
-            src="./images/CamilaGarcia.jpg"
-            alt="Photo"
-            width="264"
-            height="260"
-          />
-          <h3 class="section-team-subtitle-name">Camila Garcia</h3>
-          <p class="section-team-text-name">Marketing</p>
-        </li>
-        <li class="section-team-item-name">
-          <img
-            src="./images/DanielWilson.jpg"
-            alt="Photo"
-            width="264"
-            height="260"
-          />
-          <h3 class="section-team-subtitle-name">Daniel Wilson</h3>
-          <p class="section-team-text-name">UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <!-- section 4 -->
-    <section class="section-portfolio">
-      <h2 class="section-title-portfolio">Our Portfolio</h2>
-      <ul class="section-list-portfolio">
-        <li class="section-item-portfolio">
-          <img
-            src="./images/bank.jpg"
-            class="section-img-bank"
-            alt="Banking App"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Banking App</h3>
-          <p class="section-text-portfolio">App</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/code.jpg"
-            class="section-img-portfolio-code"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Cashless Payment</h3>
-          <p class="section-text-portfolio">Marketing</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/ordinator.jpg"
-            class="section-img-portfolio-ordinator"
-            alt="Meditation App"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Meditation App</h3>
-          <p class="section-text-portfolio">App</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/vouture.jpg"
-            class="section-portfolio-img-vouture"
-            alt="Taxi"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Taxi Service</h3>
-          <p class="section-text-portfolio">Marketing</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/telephone.jpg"
-            class="section-portfolio-img-telephone"
-            alt="Fon"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Taxi Service</h3>
-          <p class="section-text-portfolio">Marketing</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/education.jpg"
-            class="section-portfolio-img-education"
-            alt="education"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Online Courses</h3>
-          <p class="section-text-portfolio">Marketing</p>
-        </li>
-        <li class="section-item-portfolio">
-          <a href="" class="link"></a>
-          <img
-            src="./images/colag.jpg"
-            class="section-portfolio-img-colag"
-            alt="social media"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Instagram Stories Concept</h3>
-          <p class="section-text-portfolio">Design</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/fruits.jpg"
-            class="section-portfolio-img-fruits"
-            alt="fruits"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Organic Food</h3>
-          <p class="section-text-portfolio">Web Site</p>
-        </li>
-        <li class="section-item-portfolio">
-          <img
-            src="./images/coffi.jpg"
-            class="section-portfolio-img-coffee"
-            alt="Coffee"
-            width="360"
-            height="300"
-          />
-          <h3 class="section-subtitle-portfolio">Fresh Coffee</h3>
-          <p class="section-text-portfolio">Web Site</p>
-        </li>
-      </ul>
-    </section>
 
     <!-- Footer -->
     <footer class="footer-dark-bg">
